talent hub partner title color

--- a/_sass/partners.scss
+++ b/_sass/partners.scss
@@ -37,6 +37,10 @@
   color: #4888EE;
 }
 
+.providerContainer h3 a {
+  color: #16141a;
+}
+
 .providerContainer {
   border: 1px solid #CCCCCD;
   border-radius: 8px;
